--- a/AnalisisyCuracion/Ejercicio3_texto.ipynb
+++ b/AnalisisyCuracion/Ejercicio3_texto.ipynb
@@ -153,18 +153,24 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Extraer entidades:\n",
+    "========="
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "ent = textacy.extract.named_entities(doc_facundo, min_freq=10)\n",
+    "ent = pd.Series(list(ent)).astype(str).str.replace(\",\",\" \").unique()\n",
+    "ent = pd.DataFrame(ent,columns=['entidades'])\n",
+    "display(ent)"
+   ]
   },
   {
    "cell_type": "code",
